[package]
name = "basic03-map-counter"
version = "0.1.0"
authors = ["Eishun Kondoh <dreamdiagnosis@gmail.com>"]
edition = "2018"

[build-dependencies]
cargo-bpf = { git = "http://github.com/shun159/redbpf", branch = "master", default-features = false, features = ["build"] , version = "*" }

[dependencies]
probes = { path = "./probes" }
redbpf-probes = { git = "http://github.com/shun159/redbpf", branch = "master", version = "*"  }
redbpf = { features = ["load"], git = "http://github.com/shun159/redbpf", branch = "master", version = "*"  }
tokio = { version = "0.2.4", features = ["rt-core", "io-driver", "macros", "signal", "time"] }
futures = "0.3"
getopts = "0.2"
libc = "0.2"
